
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2018 NOV 24a
   * in bin
     - updated noh2D.wrp, sedov.wrp, riemann.wrp, wavywall.wrp
   * renamed cycle/resconv/_FVS+ to cycle/resconv/_FVSTVD+
   * added cycle/resconv/_FVS+Filter/


2018 NOV 23a
   * in bin
     - updated noh2D.wrp
   * renamed
     - FLUX_FDSplusMultiD -> FLUX_FDSplusFilterMultiD
     - convert_Fstar_interface -> filter_Fstar_interface
   * in cycle/resconv/_MUSCL+/resconv.c
     - added FLUX_FDSplusFilter
   * in cycle/share/res_share.c
     - renamed filter_Fstar_interface_positivity_preserving -> filter_Fstar_interface_positivity_preserving_MultiD
     - added filter_Fstar_interface_positivity_preserving based on L matrix (instead of M) to filter
       the flux


2018 NOV 19a
   * in cycle/resconv/_MUSCL+/resconv.c
     - renamed FLUX_FDSplusgen to FLUX_FDSplusMultiD
   * in bin/*wrp
     - renamed FLUX_FDSplusgen to FLUX_FDSplusMultiD
   

2018 NOV 18b
   * in bin/noh3D.wrp
     - changed aref and zetaA2
   * in bin
     - added noh2D.wrp


2018 NOV 18a
   * in bin
     - updated noh3D.wrp


2018 NOV 13a
   * in bin
     - renamed taylor_green_vortex.wrp to taylor_green_vortex_2.wrp
     - added taylor_green_vortex from Prasanna
     - added noh3D.wrp testcase
   * in CONTRIB
     - added taylor_green_vortex.wrp case by Prasanna
 

2018 NOV 10c
   * in tools/gitnewversion_public.sh
     - fixed a bug with git pull: needed to remove all directories within $warppublic first


2018 NOV 10b
   * in tools/gitnewversion_public.sh
     - fixed a bug with git pull: need to do a git checkout master and git reset --hard first


2018 NOV 10a
   * in bin/ns_SDBD.wrp
     - made modifications


2018 NOV 04a
   * moved model/fluid/doc/Plasma_Model2 to model/fluid/doc/Plasma_Model