@@ -2,8 +2,8 @@ current  resconv
 message  Fluid Spatial Discretization Scheme
 option   none
 option   FVS
+option   FVS+
 option   FVSTVD+
-option   FVS+Filter
 option   FDS
 option   FDS+
 option   FDS_Cauchy
