@@ -7,6 +7,15 @@ CFDWARP CHANGELOG
 _____________________________________________________________________________________________________
 
 
+2018 NOV 24b
+   * renamed cycle/resconv/_FVS+Filter to cycle/resconv/_FVS+
+   * in cycle/share/res_share.c
+     - in filter_Fstar_interface_positivity_preserving_MultiD(), changed initialization of
+       Vp0 and Vp1 such that the distribution is symmetric
+     - in filter_Fstar_interface_positivity_preserving(), changed initialization of
+       Vp0 and Vp1 such that the distribution is symmetric
+
+
 2018 NOV 24a
    * in bin
      - updated noh2D.wrp, sedov.wrp, riemann.wrp, wavywall.wrp
